--- a/index.html
+++ b/index.html
@@ -5,55 +5,114 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Loopstudios landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
 
-  Immersive experiences that deliver
 
-  The leader in interactive VR
+  <div class="opening">
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
+    <img src="images/logo.svg" alt="">
+    <h1>Immersive experiences that deliver</h1>
 
-  Our creations
-
-  See all
-
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
-
-  About
-  Careers
-  Events
-  Products
-  Support
-
-  © 2021 Loopstudios. All rights reserved.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <main>
+    <img id="main__boy"src="images/mobile/image-interactive.jpg" alt="">
+
+    <h1>The leader in interactive VR</h1>
+
+    <p>Founded in 2011, Loopstudios has been producing world-class virtual reality 
+      projects for some of the best companies around the globe. Our award-winning 
+      creations have transformed businesses through digital experiences that bind 
+      to their brand.</p>
+  
+  </main>
+
+  
+
+  <nav>
+    <h2>Our creations</h2>
+
+    <div class="creations">
+
+      <div class="deep">
+        <h3>Deep earth</h3>
+      </div>
+
+  <div class="night">
+    <h3>Night arcade</h3>
+  </div>
+
+  <div class="soccer">
+    <h3>Soccer team VR</h3>
+  </div>
+
+  <div class="grid">
+
+    <h3>The grid</h3>
+
+  </div>
+
+  <div class="above">
+    <h3>From up above VR</h3>
+
+  </div>
+  <div class="borealis">
+
+    <h3>Pocket borealis</h3>
+
+  </div>
+  <div class="curiosity">
+    
+  <h3>The curiosity</h3>
+
+  </div>
+  <div class="fisheye">
+    <h3> Make it fisheye</h3>
+
+  </div>
+  
+  
+
+
+    </div>
+    <button>See all</button>
+
+  </nav>
+  
+
+  
+
+  <footer>
+    <img id="footer__logo" src="images/logo.svg" alt="">
+
+    <ul id="extra">
+      <li>About</li>
+ <li> Careers</li>
+  <li>Events</li>
+  <li>Products</li>
+  <li>Support</li>
+    </ul>
+    <div class="socials">
+      <img src="images/icon-facebook.svg" alt="">
+      <img src="images/icon-twitter.svg" alt="">
+      <img src="images/icon-pinterest.svg" alt="">
+      <img src="images/icon-instagram.svg" alt="">
+    </div>
+    <p >© 2021 Loopstudios. All rights reserved.</p>
+
+  </footer>
+  
+  
+
+ 
 </body>
+
 </html>
