--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
   </div>
 
   <main>
-    <img id="main__boy"src="images/mobile/image-interactive.jpg" alt="">
+    <img id="main__boy"src="images/mobile/image-interactive.jpg" alt="" srcset="images/desktop/image-interactive.jpg">
+    <div class="about">
+      <h1>The leader in interactive VR</h1>
 
-    <h1>The leader in interactive VR</h1>
-
-    <p>Founded in 2011, Loopstudios has been producing world-class virtual reality 
-      projects for some of the best companies around the globe. Our award-winning 
-      creations have transformed businesses through digital experiences that bind 
-      to their brand.</p>
+      <p>Founded in 2011, Loopstudios has been producing world-class virtual reality 
+        projects for some of the best companies around the globe. Our award-winning 
+        creations have transformed businesses through digital experiences that bind 
+        to their brand.</p>
+    </div>
+   
   
   </main>
 
@@ -91,23 +93,33 @@
   
 
   <footer>
-    <img id="footer__logo" src="images/logo.svg" alt="">
+    <div class="footer1">
 
-    <ul id="extra">
-      <li>About</li>
- <li> Careers</li>
-  <li>Events</li>
-  <li>Products</li>
-  <li>Support</li>
-    </ul>
-    <div class="socials">
-      <img src="images/icon-facebook.svg" alt="">
-      <img src="images/icon-twitter.svg" alt="">
-      <img src="images/icon-pinterest.svg" alt="">
-      <img src="images/icon-instagram.svg" alt="">
+      <img id="footer__logo" src="images/logo.svg" alt="">
+
+      <ul id="extra">
+        <li>About</li>
+        <li> Careers</li>
+        <li>Events</li>
+        <li>Products</li>
+        <li>Support</li>
+      </ul>
+      
     </div>
-    <p >© 2021 Loopstudios. All rights reserved.</p>
 
+    <div class="footer2">
+      <div class="socials">
+        <img src="images/icon-facebook.svg" alt="">
+        <img src="images/icon-twitter.svg" alt="">
+        <img src="images/icon-pinterest.svg" alt="">
+        <img src="images/icon-instagram.svg" alt="">
+      </div>
+      <p >© 2021 Loopstudios. All rights reserved.</p>
+  
+
+
+    </div>
+ 
   </footer>
   
   
